--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --config config/webpack.config.development.js",
+    "start-helper": "webpack-dev-server --config config/webpack.config.development.js",
+    "start": "cross-env PROJECT_ENV=production npm run start",
     "start:development": "cross-env PROJECT_ENV=development npm run start",
     "start:staging": "cross-env PROJECT_ENV=staging npm run start",
     "start:production": "cross-env PROJECT_ENV=production npm run start",
