--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start-helper": "webpack-dev-server --config config/webpack.config.development.js",
-    "start": "cross-env PROJECT_ENV=production npm run start",
-    "start:development": "cross-env PROJECT_ENV=development npm run start",
+    "start": "cd server && npm run start",
+    "start:development": "webpack-dev-server --config config/webpack.config.development.js",
     "start:staging": "cross-env PROJECT_ENV=staging npm run start",
     "start:production": "cross-env PROJECT_ENV=production npm run start",
     "ui:start": "start-storybook -p 9001 -c src/ui/.storybook",
