--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-immutable-proptypes": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-select": "^3.1.1",
     "react-table": "^7.6.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -128,7 +129,8 @@
     "webpack": "^4.44.1",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@types/storybook__react": "^5.2.1"
   },
   "engines": {
     "node": "12.5.0",
